public/style.css
/* ... */
#Alternative:hover {
  background-image: url('./images/genres/Alternative.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  transform: scale(1.2);
  color: whitesmoke;
}
#Cloud:hover {
  background-image: url('./images/genres/Cloud.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  transform: scale(1.2);
  color: whitesmoke;
}
#Conscious:hover {
  background-image: url('./images/genres/Conscious.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  transform: scale(1.2);
  color: whitesmoke;
}
#Experimental:hover {
  background-image: url('./images/genres/Experimental.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  transform: scale(1.2);
  color: whitesmoke;
}
#Instrumental:hover {
  background-image: url('./images/genres/Instrumental.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  transform: scale(1.2);
  color: whitesmoke;
}
#Pop:hover {
  background-image: url('./images/genres/Pop.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  transform: scale(1.2);
  color: whitesmoke;
}
#JazzSoul:hover {
  background-image: url('./images/genres/JazzSoul.png');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  transform: scale(1.2);
  color: whitesmoke;
}
#RB:hover {
  background-image: url('./images/genres/R&B.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  transform: scale(1.2);
  color: whitesmoke;
}
#OldSchool:hover {
  background-image: url('./images/genres/Old\ School.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  transform: scale(1.2);
  color: whitesmoke;
}

@media only screen and (max-width: 600px) {
  .genreGrid{
    grid-template-columns: 70px 70px 70px 70px 70px;
    grid-template-rows: 70px 70px;
  }
  .genreName {
    font-size: 10px;
  }
}

@media only screen and (min-width: 600px) and (max-width: 900px) {
  .genreGrid {
    grid-template-rows: 100px 100px;
    grid-template-columns: 100px 100px 100px 100px 100px;
  }
}


@media only screen and (min-width: 1400px) and (max-width: 1800px) {
  .genreGrid {
    grid-template-rows: 200px 200px;
    grid-template-columns: 200px 200px 200px 200px 200px;
    margin-top: 156px;
  }
}

@media only screen and (min-width: 1800px) {
  .genreName {
    background-color: black;
    color: whitesmoke;
    transition: 0.3s;
    font-size: 2.1em;
  }
  .genreGrid {
    grid-template-rows: 17em 17em;
    grid-template-columns: 17em 17em 17em 17em 17em;
  }
}

/* Artist Form Creation Styles */

#newArtistForm {
  height: 70vh;
}

#newInterviewForm {
  height: 77vh;
}

.form {
  margin: 3em 0 0 0;
  width: 50vw;
  height: 70vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  border: 1.2px solid black;
  border-radius: 4px;
}

.viewMoreButton {
  display: flex;
  justify-content: center;
  margin-bottom: 4em;
}

.outerForm {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 7em;
}

.form h2 {
  margin-top: 0px;
  width: 100%;
  height: 22%;
  background-color: black;
  color: whitesmoke;
  padding-top: 13px;
  font-family: 'Oswald', sans-serif;
  font-weight: lighter;
}

.form h4 {
  margin-top: -40px;
  color: whitesmoke;
}

.form button {
  background-color: black;
  color: white;
  width: 9em;
  height: 36px;
  transition: 0.3s;
  border: 1px solid black;
  cursor: pointer;
}

.form button:hover {
  background-color: whitesmoke;
  color: black;
}

.form input {
  border: solid;
  border-radius: 4px;
  height: 25px;
}

.loginSignupRoute h4{
  color: black;
}

.loginError {
  position: absolute;
  width: 180px;
  border-radius: 4px;
  background: rgba(0,0,0,0.7);
  color: whitesmoke;
  text-align: center;
  font-size: 20px;
  margin-top: 65vh;
  margin-right: 5px;
  animation: fadeinout 2s linear forwards;
}

@keyframes fadeinout {
  0%,
  100% {
    opacity: 0;
  }
  85%,
  65%,
  50% {
    opacity: 1
  }
}


@media only screen and (max-width: 600px) {
  .outerForm {
    width: 100%;
  }
  .form {
    width: 90%;
    height: 55vh;
  }
  .form h2 {
    height: 15%;
  }
  .loginBorder {
    width: 30em;
  }
  .loginError {
    margin-top: 85vh;
    margin-right: 25px;
  }
}

@media only screen and (min-width: 600px) and (max-width: 900px) {
  .form h2 {
    height: 15%;
  }
}

@media only screen and (min-width: 1400px) and (max-width: 1800px) {
  .outerForm {
    margin-top: 10em;
  }
  .form {
    width: 65vw;
  }
  .form h2 {
    font-size: 3em;
    height: 3em;
  }
  .loginSignupLabel {
    font-size: 2.5em;
    margin-bottom: 20px;
  }
  .form input {
    height: 1.5em;
    width: 10em;
    font-size: 2.5em;
  }
  .form button {
    width: 10em;
    height: 70px;
    font-size: 2em;
  }
}

@media only screen and (min-width: 1800px) {
  .outerForm {
    margin-top: 10em;
  }
  .form {
    height: 70vh;
  }
  .form h2 {
    font-size: 3em;
  }
  .loginSignupLabel {
    font-size: 2em;
    margin-bottom: 20px;
  }
  .form input {
    height: 1.2em;
    width: 9em;
    font-size: 2em;
  }
  .form button {
    width: 7em;
    height: 2em;
    font-size: 2em;
  }
}



/* Edit User Styles */

.outerAccountForm {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 7em;
  height: 100vh;
  width: 100%;
}

.editEmail {
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  cursor: pointer;
  padding-top: 2em;
}
.editEmail h1 {
  font-family: 'Oswald', sans-serif;
}

.editEmail h3 {
  font-family: 'Oswald', sans-serif;
}
/* ... */

